[package]
name = "cumulus-test-relay-sproof-builder"
version = '0.1.0'
authors = ["Parity Technologies <admin@parity.io>"]
edition = '2018'

[dependencies]
# Other dependencies
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }

# Substrate dependencies
sp-state-machine = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "a9465729e2c5d2ef8d87ac404da27e5e10adde8a" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/liuchengxu/polkadot", default-features = false, rev = "a528e4488bee22cf84e554d7ca3045065af7d850" }

# Cumulus dependencies
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-state-machine/std",
	"sp-runtime/std",
	"sp-std/std",
	"cumulus-primitives-core/std",
]
